--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,42 @@
-# Compiled class file
-*.class
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Log file
-*.log
+# dependencies
+/frontend/node_modules
+/frontend/.pnp
+/frontend/.pnp.js
 
-# BlueJ files
-*.ctxt
+# testing
+/frontend/coverage
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# production
+/frontend/build
 
-# Package Files #
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+/RemoteSystemsTempFiles
+/Servers
+.metadata
+.recommenders
+somes.txt
+/frontend/README.md
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/SimpleLogin/*/robots.txt
+/SimpleLogin/*/*.html 
+#|.jsp|*.ico|*.js|*.json|*.png|*.class]
+/SimpleLogin/*/*.jsp
+/SimpleLogin/*/*.ico 
+/SimpleLogin/*/*.js 
+/SimpleLogin/*/*.json
+/SimpleLogin/*/*.png
+/SimpleLogin/build/*
+/SimpleLogin/WebContent/static
+package-lock.json
